sectionStyles.css
.container {
  max-width: 1280px;
  margin: auto;
  padding: var(--space-sm);
  box-sizing: border-box;
  line-height: 32px;
  width: 90vw;
  margin: auto;
}

/* Navbar */
nav {
  background: var(--colour-primary);
  color: #fff;
  display: flex;
  flex-flow: column nowrap;
}

#nav-toggle {
  display: flex;
  justify-content: center;
  padding: 1rem;
}

#nav-button {
  margin-right: 16px;
}

.nav__content {
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  display: flex;
}

.nav__mobileCollapse {
  display: none;
}

.nav__item {
  padding: 1rem;
  display: flex;
  justify-content: center;
  border-top: 1px solid var(--colour-secondary);
  box-sizing: border-box;
}

.nav__item {
  width: 100%;
}

.nav__item:hover {
  background: var(--colour-primary-hover);
}

/* Header */
header {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  min-height: 650px;
}

.header__content {
  animation: fadeFromLeft 0.5s ease-in-out;
}

.header__title {
  margin: 0;
}

.header__location {
  color: var(--colour-secondary);
}

.header__img-container {
  position: relative;
  margin: var(--space-md) 0;
  animation: fadeFromRight 0.5s ease-in-out;
}

.header__img {
  border-radius: 50%;
  box-shadow: var(--box-shadow);
}

.circle {
  border-radius: 50%;
  padding-top: 100%;
  width: 100%;
  z-index: -1;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.5;
}

.circle-top {
  background: var(--colour-primary);
  transform: translate(-10px, -15px);
}

.circle-bottom {
  background: var(--colour-accent);
  transform: translate(10px, 15px);
}

/* Projects */
.grid-container {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  gap: 30px;
  grid-template-rows: auto;
  width: 100%;
}

.grid-item {
  display: flex;
  flex-flow: column nowrap;
  width: 100%;
  grid-column: span 12 / auto;
  border-radius: 5px;
  background: #fff;
  box-shadow: var(--box-shadow);
}

.grid-item__img-container {
  height: 200px;
  width: 100%;
  overflow: hidden;
}

.grid-item__img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 5px 5px 0 0;
}

.grid-item__info {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-evenly;
  padding: 1rem;
  flex: 1;
  box-sizing: border-box;
}

.grid-item__description {
  color: var(--colour-text-description);
}

.grid-item__github {
  background: var(--colour-secondary);
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 0 0 5px 5px;
  padding: 10px;
  box-sizing: border-box;
  color: #fff;
}

.grid-item__github:hover {
  background: var(--colour-primary-hover);
}

.grid-item:hover {
  transform: translateY(-2px);
  box-shadow: var(--box-shadow-hover);
}

.grid-item:nth-child(1) {
  animation: fadeFromLeft 0.5s ease-in-out;
}
.grid-item:nth-child(2) {
  animation: fadeFromTop 0.6s ease-in-out;
}
.grid-item:nth-child(3) {
  animation: fadeFromBottom 0.7s ease-in-out;
}
.grid-item:nth-child(4) {
  animation: fadeFromRight 0.8s ease-in-out;
}

/* Experience */
.experience__item {
  margin-bottom: 16px;
}

.experience__pdf {
  background: var(--colour-secondary);
  color: var(--colour-text-secondary);
  margin: 24px 0;
}

/* Recommendations */
.grid-item__recommendation {
  margin-bottom: 16px;
  color: var(--colour-text-accent);
}

.grid-item__streaming-links {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin-top: 16px;
}

.fa-github {
  font-size: 24px;
  margin-right: 12px;
}

.fab:hover {
  transform: translateY(-2px);
}

.streaming-link__icon {
  color: var(--colour-primary);
  font-size: 40px;
}

.streaming-link__icon:hover {
  color: var(--colour-primary-hover);
}

/* Footer */

footer {
  display: flex;
  justify-content: center;
  padding: 16px;
  background: var(--colour-primary);
  color: var(--colour-text-secondary);

  box-sizing: border-box;
}

@media screen and (min-width: 650px) {
  .nav__content {
    flex-flow: row nowrap;
    justify-content: flex-end;
    align-items: center;
  }

  #nav-toggle {
    display: none;
  }

  .nav__mobileCollapse {
    display: flex;
  }

  .nav__item {
    width: unset;
    border: 0;
  }

  .header {
    flex-flow: row-reverse nowrap;
    justify-content: center;
  }

  .header__info {
    margin-right: 64px;
  }

  .grid-item {
    grid-column: span 6 / auto;
  }
}

@media screen and (min-width: 1200px) {
  .grid-item {
    grid-column: span 3 / auto;
  }
}

